Page product-listing (viner) done + responsive

--- a/viner/viner.html
+++ b/viner/viner.html
@@ -106,11 +106,11 @@
       <div class="headline">
         <h1>Viner</h1>
       </div>
-      <div class="products">
+      <div class="product-listing">
         <div class="filters">
           <p class="search-results">Visar 5 resultat</p>
           <div class="filter-wine-types">
-            <h4>Vintyper</h4>
+            <h4 class="filter-header">Vintyper</h4>
             <ul>
               <li>
                 <label><input type="checkbox" />Rött vin</label>
@@ -127,7 +127,7 @@
             </ul>
           </div>
           <div class="filter-price">
-            <h4>Pris</h4>
+            <h4 class="filter-header">Pris</h4>
             <div class="price-input-boxes">
               <div class="input-box">
                 <label for="from">Från</label>
@@ -145,6 +145,408 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="products">
+          <article>
+            <a class="link" href="#">
+              <picture>
+                <source
+                  type="image/webp"
+                  media="(max-width: 480px)"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@1x.webp 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@2x.webp 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@3x.webp 3x
+                  "
+                />
+                <source
+                  type="image/png"
+                  media="(max-width: 480px)"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@1x.png 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@2x.png 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@3x.png 3x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.webp 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@2x.webp 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@3x.webp 3x
+                  "
+                />
+                <source
+                  type="image/png"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.png 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@2x.png 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@3x.png 3x
+                  "
+                />
+                <img
+                  class="product-img"
+                  src="../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.png"
+                  alt="Vinflaskan Bardolino"
+                  loading="lazy"
+                />
+              </picture>
+            </a>
+            <div class="product-info-container">
+              <a href="#">
+                <p class="type">Rött vin</p>
+                <h4 class="title">La Corde del Pozzo</h4>
+                <p class="description">Bardolino, 2023</p>
+                <div class="country-label-container">
+                  <img
+                    class="flag"
+                    src="../icon/svgrepo-italy.svg"
+                    alt="Ikon av Italiens flagga"
+                  />
+                  <p class="country">Venetien, Italien</p>
+                </div>
+                <p class="price">3000:-</p>
+                <p class="volume">750 ml · 12,5 % vol.</p>
+              </a>
+              <div class="in-stock-add-to-cart-button">
+                <div class="in-stock-container">
+                  <img
+                    class="in-stock-img"
+                    src="../icon/iconmonstr-check-mark-in-stock.svg"
+                    alt="Ikon av en grön bock"
+                  />
+                  <p class="in-stock">10 i lager</p>
+                </div>
+                <button>
+                  <img
+                    class="add-to-cart-img"
+                    src="../icon/iconmonstr-shopping-cart.svg"
+                    alt="Ikon av en kundvagn"
+                  />
+                </button>
+              </div>
+            </div>
+          </article>
+          <article>
+            <a class="link" href="#">
+              <picture>
+                <source
+                  type="image/webp"
+                  media="(max-width: 480px)"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@1x.webp 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@2x.webp 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@3x.webp 3x
+                  "
+                />
+                <source
+                  type="image/png"
+                  media="(max-width: 480px)"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@1x.png 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@2x.png 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@3x.png 3x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.webp 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@2x.webp 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@3x.webp 3x
+                  "
+                />
+                <source
+                  type="image/png"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.png 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@2x.png 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@3x.png 3x
+                  "
+                />
+                <img
+                  class="product-img"
+                  src="../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.png"
+                  alt="Vinflaskan Bardolino"
+                  loading="lazy"
+                />
+              </picture>
+            </a>
+            <div class="product-info-container">
+              <a href="#">
+                <p class="type">Rött vin</p>
+                <h4 class="title">La Corde del Pozzo</h4>
+                <p class="description">Bardolino, 2023</p>
+                <div class="country-label-container">
+                  <img
+                    class="flag"
+                    src="../icon/svgrepo-italy.svg"
+                    alt="Ikon av Italiens flagga"
+                  />
+                  <p class="country">Venetien, Italien</p>
+                </div>
+                <p class="price">3000:-</p>
+                <p class="volume">750 ml · 12,5 % vol.</p>
+              </a>
+              <div class="in-stock-add-to-cart-button">
+                <div class="in-stock-container">
+                  <img
+                    class="in-stock-img"
+                    src="../icon/iconmonstr-check-mark-in-stock.svg"
+                    alt="Ikon av en grön bock"
+                  />
+                  <p class="in-stock">10 i lager</p>
+                </div>
+                <button>
+                  <img
+                    class="add-to-cart-img"
+                    src="../icon/iconmonstr-shopping-cart.svg"
+                    alt="Ikon av en kundvagn"
+                  />
+                </button>
+              </div>
+            </div>
+          </article>
+          <article>
+            <a class="link" href="#">
+              <picture>
+                <source
+                  type="image/webp"
+                  media="(max-width: 480px)"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@1x.webp 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@2x.webp 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@3x.webp 3x
+                  "
+                />
+                <source
+                  type="image/png"
+                  media="(max-width: 480px)"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@1x.png 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@2x.png 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@3x.png 3x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.webp 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@2x.webp 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@3x.webp 3x
+                  "
+                />
+                <source
+                  type="image/png"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.png 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@2x.png 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@3x.png 3x
+                  "
+                />
+                <img
+                  class="product-img"
+                  src="../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.png"
+                  alt="Vinflaskan Bardolino"
+                  loading="lazy"
+                />
+              </picture>
+            </a>
+            <div class="product-info-container">
+              <a href="#">
+                <p class="type">Rött vin</p>
+                <h4 class="title">La Corde del Pozzo</h4>
+                <p class="description">Bardolino, 2023</p>
+                <div class="country-label-container">
+                  <img
+                    class="flag"
+                    src="../icon/svgrepo-italy.svg"
+                    alt="Ikon av Italiens flagga"
+                  />
+                  <p class="country">Venetien, Italien</p>
+                </div>
+                <p class="price">3000:-</p>
+                <p class="volume">750 ml · 12,5 % vol.</p>
+              </a>
+              <div class="in-stock-add-to-cart-button">
+                <div class="in-stock-container">
+                  <img
+                    class="in-stock-img"
+                    src="../icon/iconmonstr-check-mark-in-stock.svg"
+                    alt="Ikon av en grön bock"
+                  />
+                  <p class="in-stock">10 i lager</p>
+                </div>
+                <button>
+                  <img
+                    class="add-to-cart-img"
+                    src="../icon/iconmonstr-shopping-cart.svg"
+                    alt="Ikon av en kundvagn"
+                  />
+                </button>
+              </div>
+            </div>
+          </article>
+          <article>
+            <a class="link" href="#">
+              <picture>
+                <source
+                  type="image/webp"
+                  media="(max-width: 480px)"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@1x.webp 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@2x.webp 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@3x.webp 3x
+                  "
+                />
+                <source
+                  type="image/png"
+                  media="(max-width: 480px)"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@1x.png 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@2x.png 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@3x.png 3x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.webp 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@2x.webp 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@3x.webp 3x
+                  "
+                />
+                <source
+                  type="image/png"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.png 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@2x.png 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@3x.png 3x
+                  "
+                />
+                <img
+                  class="product-img"
+                  src="../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.png"
+                  alt="Vinflaskan Bardolino"
+                  loading="lazy"
+                />
+              </picture>
+            </a>
+            <div class="product-info-container">
+              <a href="#">
+                <p class="type">Rött vin</p>
+                <h4 class="title">La Corde del Pozzo</h4>
+                <p class="description">Bardolino, 2023</p>
+                <div class="country-label-container">
+                  <img
+                    class="flag"
+                    src="../icon/svgrepo-italy.svg"
+                    alt="Ikon av Italiens flagga"
+                  />
+                  <p class="country">Venetien, Italien</p>
+                </div>
+                <p class="price">3000:-</p>
+                <p class="volume">750 ml · 12,5 % vol.</p>
+              </a>
+              <div class="in-stock-add-to-cart-button">
+                <div class="in-stock-container">
+                  <img
+                    class="in-stock-img"
+                    src="../icon/iconmonstr-check-mark-in-stock.svg"
+                    alt="Ikon av en grön bock"
+                  />
+                  <p class="in-stock">10 i lager</p>
+                </div>
+                <button>
+                  <img
+                    class="add-to-cart-img"
+                    src="../icon/iconmonstr-shopping-cart.svg"
+                    alt="Ikon av en kundvagn"
+                  />
+                </button>
+              </div>
+            </div>
+          </article>
+          <article>
+            <a class="link" href="#">
+              <picture>
+                <source
+                  type="image/webp"
+                  media="(max-width: 480px)"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@1x.webp 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@2x.webp 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@3x.webp 3x
+                  "
+                />
+                <source
+                  type="image/png"
+                  media="(max-width: 480px)"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@1x.png 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@2x.png 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page-mobile@3x.png 3x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.webp 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@2x.webp 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@3x.webp 3x
+                  "
+                />
+                <source
+                  type="image/png"
+                  srcset="
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.png 1x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@2x.png 2x,
+                    ../img/products/product-listing-page/bardolino/bardolino-product-listing-page@3x.png 3x
+                  "
+                />
+                <img
+                  class="product-img"
+                  src="../img/products/product-listing-page/bardolino/bardolino-product-listing-page@1x.png"
+                  alt="Vinflaskan Bardolino"
+                  loading="lazy"
+                />
+              </picture>
+            </a>
+            <div class="product-info-container">
+              <a href="#">
+                <p class="type">Rött vin</p>
+                <h4 class="title">La Corde del Pozzo</h4>
+                <p class="description">Bardolino, 2023</p>
+                <div class="country-label-container">
+                  <img
+                    class="flag"
+                    src="../icon/svgrepo-italy.svg"
+                    alt="Ikon av Italiens flagga"
+                  />
+                  <p class="country">Venetien, Italien</p>
+                </div>
+                <p class="price">3000:-</p>
+                <p class="volume">750 ml · 12,5 % vol.</p>
+              </a>
+              <div class="in-stock-add-to-cart-button">
+                <div class="in-stock-container">
+                  <img
+                    class="in-stock-img"
+                    src="../icon/iconmonstr-check-mark-in-stock.svg"
+                    alt="Ikon av en grön bock"
+                  />
+                  <p class="in-stock">10 i lager</p>
+                </div>
+                <button>
+                  <img
+                    class="add-to-cart-img"
+                    src="../icon/iconmonstr-shopping-cart.svg"
+                    alt="Ikon av en kundvagn"
+                  />
+                </button>
+              </div>
+            </div>
+          </article>
         </div>
       </div>
     </main>
