gallery.js is now fully functional

--- a/viner/produkter/bardolino.html
+++ b/viner/produkter/bardolino.html
@@ -153,13 +153,14 @@
           <div class="video-wrapper gallery-item hidden">
             <video class="gallery-video" controls>
               <source
-                src="../../video/bardolino/bardolino-video@vp9.webm"
+                src="../../video/bardolino/bardolino-video-nr1@vp9.webm"
                 type="video/webm"
               />
               <source
-                src="../../video/bardolino/bardolino-video@h264.mp4"
+                src="../../video/bardolino/bardolino-video-nr1@h264.mp4"
                 type="video/mp4"
               />
+              Din webbläsare stöder ej video-formatet.
             </video>
           </div>
         </div>
