Page for individual products finished + responsive

--- a/viner/produkter/bardolino.html
+++ b/viner/produkter/bardolino.html
@@ -30,7 +30,7 @@
           <a class="logo-desktop" href="../../index.html"
             ><img src="../../img/logo/logo.svg" alt="Vinbolagets logga"
           /></a>
-          <a class="logo-mobile" href="../index.html"
+          <a class="logo-mobile" href="../../index.html"
             ><img src="../../img/logo/logo-mobile.svg" alt="Vinbolagets logga"
           /></a>
           <form
@@ -238,6 +238,36 @@
           </form>
         </section>
       </div>
+      <section class="product-info">
+        <h2>Produktinformation</h2>
+        <div class="product-info-content">
+          <article>
+            <h3>Råvaror</h3>
+            <p>Corvina, corvine och rondinella.</p>
+          </article>
+          <article>
+            <h3>Producent</h3>
+            <p>Fasoli Gino</p>
+          </article>
+          <article>
+            <h3>Ursprung</h3>
+            <p>
+              Bardolino ligger öster om sjön Garda i Venetien. Druvorna till
+              detta vin kommer från vingårdar öster om Gardasjön. Vinrankorna är
+              uppbundna i så kallade pergolas.
+            </p>
+          </article>
+          <article>
+            <h3>Om producenten</h3>
+            <p>
+              Fasoli Gino har odlat vin enligt ekologiska principer sedan tidigt
+              1980-tal och från mitten av 1990-talet är producentens samtliga
+              vingårdar ekologiskt certifierade. Företaget drivs idag av Matteo
+              Fasoli.
+            </p>
+          </article>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="footer-content">
