Updated product links (again) inside page Viner with test links

--- a/viner/viner.html
+++ b/viner/viner.html
@@ -148,7 +148,7 @@
         </div>
         <div class="products">
           <article>
-            <a class="link" href="produkter/bardolino.html">
+            <a class="link" href="produkter/bardolino">
               <picture>
                 <source
                   type="image/webp"
@@ -193,7 +193,7 @@
               </picture>
             </a>
             <div class="product-info-container">
-              <a href="produkter/bardolino.html">
+              <a href="produkter/bardolino">
                 <p class="type">Rött vin</p>
                 <h4 class="title">La Corde del Pozzo</h4>
                 <p class="description">Bardolino, 2023</p>
@@ -228,7 +228,7 @@
             </div>
           </article>
           <article>
-            <a class="link" href="produkter/bardolino.html">
+            <a class="link" href="produkter/bardolino">
               <picture>
                 <source
                   type="image/webp"
@@ -273,7 +273,7 @@
               </picture>
             </a>
             <div class="product-info-container">
-              <a href="produkter/bardolino.html">
+              <a href="produkter/bardolino">
                 <p class="type">Rött vin</p>
                 <h4 class="title">La Corde del Pozzo</h4>
                 <p class="description">Bardolino, 2023</p>
@@ -308,7 +308,7 @@
             </div>
           </article>
           <article>
-            <a class="link" href="produkter/bardolino.html">
+            <a class="link" href="produkter/bardolino">
               <picture>
                 <source
                   type="image/webp"
@@ -353,7 +353,7 @@
               </picture>
             </a>
             <div class="product-info-container">
-              <a href="produkter/bardolino.html">
+              <a href="produkter/bardolino">
                 <p class="type">Rött vin</p>
                 <h4 class="title">La Corde del Pozzo</h4>
                 <p class="description">Bardolino, 2023</p>
@@ -388,7 +388,7 @@
             </div>
           </article>
           <article>
-            <a class="link" href="produkter/bardolino.html">
+            <a class="link" href="produkter/bardolino">
               <picture>
                 <source
                   type="image/webp"
@@ -433,7 +433,7 @@
               </picture>
             </a>
             <div class="product-info-container">
-              <a href="produkter/bardolino.html">
+              <a href="produkter/bardolino">
                 <p class="type">Rött vin</p>
                 <h4 class="title">La Corde del Pozzo</h4>
                 <p class="description">Bardolino, 2023</p>
@@ -468,7 +468,7 @@
             </div>
           </article>
           <article>
-            <a class="link" href="produkter/bardolino.html">
+            <a class="link" href="produkter/bardolino">
               <picture>
                 <source
                   type="image/webp"
@@ -513,7 +513,7 @@
               </picture>
             </a>
             <div class="product-info-container">
-              <a href="produkter/bardolino.html">
+              <a href="produkter/bardolino">
                 <p class="type">Rött vin</p>
                 <h4 class="title">La Corde del Pozzo</h4>
                 <p class="description">Bardolino, 2023</p>
