Added preload='none' to video in order to improve page load time

--- a/viner/produkter/bardolino.html
+++ b/viner/produkter/bardolino.html
@@ -152,7 +152,7 @@
               </picture>
             </div>
             <div class="video-wrapper gallery-item hidden">
-              <video class="gallery-video" controls>
+              <video class="gallery-video" preload="none" controls>
                 <source
                   src="../../video/bardolino/bardolino-video-nr1@vp9.webm"
                   type="video/webm"
